2005-06-03  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdlib/mallocr.c (MALLOC_COPY): Switch to use memmove
	instead of memcpy.

2005-05-12  Jeff Johnston  <jjohnstn@redhat.com>

	* configure.host (mn10300-*): Add long long I/O support by default.

2005-05-12  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/sys/linux/getpwuid.c: Removed.
	* libc/sys/linux/getpwnam.c: Removed.
	* libc/sys/linux/getpwent.c: New file containing logic
	from files removed above.  This allows overriding of file
	in libc/unix.
	* libc/sys/linux/Makefile.am: Support changes above.
	* libc/sys/linux/Makefile.in: Regenerated.

2005-04-28  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdio/vfscanf.c (__svfscanf_r): Fix code thinko
	when checking for multiple flags.

2005-04-18  Hans-Peter Nilsson  <hp@axis.com>

	* configure.host <cris-*-* | crisv32-*-*>: Set
        default_newlib_io_long_long="yes".

2005-04-08  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/libgen.h: New file.

2005-04-08  Shaun Jackman  <sjackman@gmail.com>

	* libc/unix/Makefile.am: Add support for basename and dirname.
	* libc/unix/Makefile.in: Regenerated.
	* libc/unix/basename.c: New file.
	* libc/unix/dirname.c: New file.

2005-04-07  Shaun Jackman  <sjackman@gmail.com>

	* libc/sys/linux/inode.c (lchown): New function.

2005-04-07  Shaun Jackman  <sjackman@gmail.com>

	* libc/unix/Makefile.am (LIB_OBJS): Include all the ELIX objects if no
	ELIX level is defined.
	* libc/unix/Makefile.in: Regenerated.

2005-04-05  Dave Korn  <dave.korn@artimi.com>

	* libc/stdio/vfscanf.c (__svfscanf_r): If an error occurs processing
	something that looks like a "NaN", put back the characters processed.

2005-04-01  Corinna Vinschen  <corinna@vinschen.de>

	* libc/stdlib/strtod.c (_strtod_r): Never change s00.

2005-03-23  Christopher Faylor  <cgf@timesys.com>

	* configure.host: For cygwin, redefine CC with cygwin include directory
	first to mimic the behavior of the top-level configury.  Move include